; ModuleID = '/home/carl/AnghaBench/skynet/service-src/extr_service_harbor.c_header_to_message.c'
source_filename = "/home/carl/AnghaBench/skynet/service-src/extr_service_harbor.c_header_to_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.remote_message_header = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.remote_message_header*, i32*)* @header_to_message to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @header_to_message(%struct.remote_message_header* %0, i32* %1) #0 {
  %3 = alloca %struct.remote_message_header*, align 8
  %4 = alloca i32*, align 8
  store %struct.remote_message_header* %0, %struct.remote_message_header** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %4, align 8
  %6 = load %struct.remote_message_header*, %struct.remote_message_header** %3, align 8
  %7 = getelementptr inbounds %struct.remote_message_header, %struct.remote_message_header* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @to_bigendian(i32* %5, i32 %8)
  %10 = load i32*, i32** %4, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 4
  %12 = load %struct.remote_message_header*, %struct.remote_message_header** %3, align 8
  %13 = getelementptr inbounds %struct.remote_message_header, %struct.remote_message_header* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @to_bigendian(i32* %11, i32 %14)
  %16 = load i32*, i32** %4, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 8
  %18 = load %struct.remote_message_header*, %struct.remote_message_header** %3, align 8
  %19 = getelementptr inbounds %struct.remote_message_header, %struct.remote_message_header* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @to_bigendian(i32* %17, i32 %20)
  ret void
}

declare dso_local i32 @to_bigendian(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
